<resources>
    <string name="app_name">NetFitness</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">NetFitness</string>
    <string name="site_address">www.netfitness.net.br</string>
    <string name="title_activity_main">NetFitness</string>
    <string name="no_connection">Conexão não disponível</string>
    <string name="user_not_allowed">O usuário não tem acesso aos recursos do aplicativo mobile</string>
    <string name="treino_deleted">Treino excluido com sucesso</string>
    <string name="treino_not_selected">É necessário selecionar um treino na lista</string>
    <string name="incomplete_exercicio">As series e as repetições dos exercícios incluidos\nnão foram informadas corretamente</string>
    <string name="empty_lista_exercicios">Não foi selecionado nenhum exercício (para selecionar o exercício informar as series e as repetições corretamente)</string>
    <string name="empty_descricao_treino">Não foi informada a descrição do treino</string>
    <string name="empty_nome_treino">Não foi informado o nome do treino</string>
    <string name="altura_peso_zero">Altura e peso não pode ser menor do que zero</string>
    <string name="altura_peso_invalido">Altura ou peso em formato inválido, colocar numeros decimais separados por .(ponto) EX: 1.80</string>
                <string name="web_service_login">http://192.168.25.6/NetFitness/webservice/login.php?XDEBUG_SESSION_START=netbeans-xdebug</string>
                <string name="web_service_listar_treinos_instrutor">http://192.168.25.6/NetFitness/webservice/listarTreinosInstrutor.php</string>
                <string name="web_service_listar_treinos_aluno">http://192.168.25.6/NetFitness/webservice/listarTreinosAluno.php?XDEBUG_SESSION_START=netbeans-xdebug</string>
                <string name="web_service_listar_exames_fisicos_aluno">http://192.168.25.6/NetFitness/webservice/listarExamesFisicosAluno.php?XDEBUG_SESSION_START=netbeans-xdebug</string>
                <string name="web_service_excluir_treino">http://192.168.25.6/NetFitness/webservice/excluirTreino.php?XDEBUG_SESSION_START=netbeans-xdebug</string>
                <string name="web_service_listar_exercicios">http://192.168.25.6/NetFitness/webservice/listarExercicios.php</string>
                <string name="web_service_inserir_treino">http://192.168.25.6/NetFitness/webservice/inserirTreino.php</string>
                <string name="web_service_alterar_treino">http://192.168.25.6/NetFitness/webservice/alterarTreino.php?XDEBUG_SESSION_START=netbeans-xdebug</string>
                <string name="web_service_listar_treinos_realizados">http://192.168.25.6/NetFitness/webservice/listarTreinosRealizados.php?XDEBUG_SESSION_T=netbeans-xdebug</string>
                <string name="web_service_upload_file">http://192.168.25.6/NetFitness/webservice/uploadFile.php?XDEBUG_SESSION_START=netbeans-xdebug</string>
                <string name="endereco_fotos_alunos">http://192.168.25.6/NetFitness/web/images/usuarios/alunos/</string>
                <string name="web_service_visualizar_noticias_aluno">http://192.168.25.6/NetFitness/webservice/visualizarNoticiasAluno.php?XDEBUG_SESSION_START=netbeans-xdebug</string>
                <string name="web_service_visualizar_dicas_aluno">http://192.168.25.6/NetFitness/webservice/visualizarDicasAluno.php?XDEBUG_SESSION_START=netbeans-xdebug</string>
                <string name="web_service_alterar_qtd_treinos_realizados">http://192.168.25.6/NetFitness/webservice/alterarQtdTreinosRealizados.php?XDEBUG_SESSION_START=netbeans-xdebug</string>
                <string name="web_service_inserir_opiniao">http://192.168.25.6/NetFitness/webservice/inserirOpiniao.php?XDEBUG_SESSION_START=netbeans-xdebug</string>
        <string name="loading">Loading</string>
        <string name="wait_loading">Aguarde o carregamento...</string>
        <string-array name="menu_instrutor">
            <item>Inserir Treino</item>
            <item>Excluir Treino</item>
            <item>Visualizar Treinos</item>
            <item>Alterar treino</item>
        </string-array>
        <string-array name="menu_aluno">
            <item>Visualizar Treinos</item>
            <item>Visualizar Gráficos</item>
            <item>Comparar Gráficos</item>
            <item>Calcular IMC</item>
            <item>Mostrar Foto</item>
            <item>Visualizar Noticias</item>
            <item>Visualizar Dicas</item>
            <item>Inserir Opinião</item>
        </string-array>
        <string name="title_activity_aluno">AlunoActivity</string>
        <string name="labelButtonExcluir">Excluir</string>
        <string name="labelNomeExercicio">Nm Ex.</string>
        <string name="txtLabelNomeTreino">Nome:</string>
        <string name="txtLabelNomeExercicio">Nome:</string>
        <string name="txtLabelExercicios">Exercícios:</string>
        <string name="txtLabelDescricaoTreino">Descrição:</string>
        <string name="labelMusculo">Músc.</string>
        <string name="labelDescricaoExercicio">Desc.</string>
        <string name="labelSeries">Ser.</string>
        <string name="labelRepeticoes">Rep.</string>
        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="labelTxtSeries">Series:</string>
        <string name="txtLabelRepeticoes">Repeticões:</string>
        <string name="btnLabelInserirTreino">Inserir</string>
        <string name="btnLabelAlterarTreino">Alterar</string>
        <string name="pesoLabel">Peso</string>
        <string name="labelGraphIMC">IMC</string>
        <string name="labelGraphTorax">Circunfêrencia Torax</string>
        <string name="labelGraphAbdomen">Circunferência Abdomen</string>
        <string name="labelGraphBraco">Circunferência Braço</string>
        <string name="labelGraphAntebraco">Circunferência Antebraço</string>
        <string name="labelGraphCoxa">Circunferência Coxa</string>
        <string name="labelGraphPanturrilha">Circunferência Panturrilha</string>
        <string name="btnLabelVisualizarHistorico">Visualizar Histórico e Atualizar</string>
        <string name="labelDataVinculotreino">Data vinculo treino:</string>
        <string name="labelNomeTreino">Nome Treino:</string>
        <string name="labelQuantidadeTreinos">Qtd de treinos totais:</string>
        <string name="labelDatasTreinosRealizados">Datas treinos finalizados:</string>
        <string name="labelButtonDatasTreinosRealizados">Mostrar</string>
        <string name="labelTreinosFinalizados">Qtd treinos finalizados:</string>
        <string name="datasTreinosRealizados">Datas treinos finalizados</string>
        <string name="selecionarGraficos">Selecionar os gráficos</string>
        <string name="checkBoxPeso">Peso</string>
        <string name="checkBoxIMC">IMC</string>
        <string name="checkBoxTorax">Torax</string>
        <string name="checkBoxAbdomen">Abdomen</string>
        <string name="checkBoxBraco">Braço</string>
        <string name="checkBoxAntebraco">Antebraço</string>
        <string name="checkBoxCoxa">Coxa</string>
        <string name="checkBoxPanturrilha">Panturrilha</string>
        <string name="LabelButtonCompararGraficos">Comparar</string>
        <string name="labelCompararGraficos">Comparar Gráficos</string>
        <string name="no_element_comparar_grafico">É necessario selecionar pelo menos dois gráficos para efetuar a comparação</string>
        <string name="too_much_elements_comparar_grafico">Não é possível comparar mais de quatro gráficos</string>
        <string name="labelButtonMudarFoto">Mudar Foto</string>
        <string name="labelButtonFileBack">Back</string>
        <string name="labelButtonConfirmarFoto">Confirmar</string>
        <string name="file_not_supported">O arquivo selecionado não é um tipo de imagem suportada</string>
        <string name="fechar_titulo_dialog">Fechar Netfitness</string>
        <string name="mensagem_fechar_dialog">Você quer realmente sair do aplicativo?</string>
        <string name="sim_ao_fechar">Sim</string>
        <string name="nao_ao_fechar">Não</string>
        <string name="file_not_uploaded">Impossível efetuar o upload da foto no servidor\\n</string>
        <string name="file_uploaded">Upload da foto efetuado corretamente</string>
        <string name="labelButtonAtualizarTreino">Autalizar</string>
        <string name="TextViewAtualizarTreino">Atualizar treinos finalizados</string>
        <string name="labelButtonAtualizarQtdTreinos">Atualizar</string>
        <string name="TextViewMensagemAtualizar">Clicando em \"Sim\" as datas dos últimos treinos adiocionados serão atualizadas à data de hoje.\n\nDeseja realmente continuar?</string>
        <string name="treino_not_updated">Não foi atualizada a quantidade de treinos realizados</string>
        <string name="datas_treinos_not_updated">Impossível atualizar as datas dos treinos finalizados</string>
    <string name="labelInserirOpiniao">Inserir a opinião:</string>
    <string name="labelButtonInserirOpiniao">Inserir Opinião</string>
    <string name="opiniao_empty">O campo opinião é vazio</string>
</resources>