<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context="br.net.netfitness.netfitness.DetalharTreinoFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtLabelNomeTreino"
        android:id="@+id/txtLabelNomeTreino"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:textColor="#ff1997ff" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/txtNomeTreino"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_alignTop="@+id/txtLabelNomeTreino"
        android:layout_toRightOf="@+id/txtLabelNomeTreino"
        android:layout_toEndOf="@+id/txtLabelNomeTreino" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtLabelDescricaoTreino"
        android:id="@+id/txtLabelDescricaoTreino"
        android:layout_below="@+id/txtNomeTreino"
        android:layout_alignLeft="@+id/txtLabelNomeTreino"
        android:layout_alignStart="@+id/txtLabelNomeTreino"
        android:layout_marginTop="20dp"
        android:textColor="#ff1997ff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/txtDescricaoTreino"
        android:layout_alignTop="@+id/txtLabelDescricaoTreino"
        android:layout_toRightOf="@+id/txtLabelDescricaoTreino"
        android:layout_toEndOf="@+id/txtLabelDescricaoTreino"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp" />


    <Button
        style="@style/btnNetfitness"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLabelVisualizarHistorico"
        android:id="@+id/buttonHistorico"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txtDescricaoTreino"
        android:layout_alignLeft="@+id/txtLabelDescricaoTreino"
        android:layout_alignStart="@+id/txtLabelDescricaoTreino"
        android:layout_marginRight="30dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtLabelExercicios"
        android:id="@+id/txtLabelExercicios"
        android:layout_marginTop="30dp"
        android:textColor="#ff1997ff"
        android:layout_below="@+id/buttonHistorico"
        android:layout_alignLeft="@+id/txtLabelDescricaoTreino"
        android:layout_alignStart="@+id/txtLabelDescricaoTreino" />




        <ListView
            android:layout_below="@+id/txtLabelExercicios"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listViewExercicios" />




</RelativeLayout>