<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context="br.net.netfitness.netfitness.VisualizarHistoricoTreinoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:paddingBottom="50dp"
       android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/labelDataVinculotreino"
            android:textColor="#ff1997ff"
            android:id="@+id/labelDataVinculoTreino"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/labelNomeTreino"
            android:layout_alignLeft="@+id/labelNomeTreino"
            android:layout_alignStart="@+id/labelNomeTreino" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="New Text"
            android:id="@+id/textViewDataVinculoTreino"
            android:layout_alignTop="@+id/labelDataVinculoTreino"
            android:layout_toRightOf="@+id/labelDataVinculoTreino"
            android:layout_toEndOf="@+id/labelDataVinculoTreino"
            android:layout_marginLeft="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff1997ff"
            android:text="@string/labelNomeTreino"
            android:id="@+id/labelNomeTreino"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="New Text"
            android:id="@+id/textViewNomeTreino"
            android:layout_alignTop="@+id/labelNomeTreino"
            android:layout_toRightOf="@+id/labelNomeTreino"
            android:layout_toEndOf="@+id/labelNomeTreino"
            android:layout_marginLeft="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff1997ff"
            android:text="@string/labelQuantidadeTreinos"
            android:id="@+id/labelQtdTreinos"
            android:layout_below="@+id/labelDataVinculoTreino"
            android:layout_alignLeft="@+id/labelDataVinculoTreino"
            android:layout_alignStart="@+id/labelDataVinculoTreino"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="New Text"
            android:id="@+id/textViewQtdTreinos"
            android:layout_alignTop="@+id/labelQtdTreinos"
            android:layout_toRightOf="@+id/labelQtdTreinos"
            android:layout_toEndOf="@+id/labelQtdTreinos"
            android:layout_marginLeft="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff1997ff"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/labelDatasTreinosRealizados"
            android:id="@+id/labelDatasTreinosRealizados"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/labelTreinosFinalizados"
            android:layout_alignLeft="@+id/labelTreinosFinalizados"
            android:layout_alignStart="@+id/labelTreinosFinalizados" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff1997ff"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/labelTreinosFinalizados"
            android:id="@+id/labelTreinosFinalizados"
            android:layout_below="@+id/labelQtdTreinos"
            android:layout_alignLeft="@+id/labelQtdTreinos"
            android:layout_alignStart="@+id/labelQtdTreinos"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textViewTreinosFinalizados"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignTop="@+id/labelTreinosFinalizados"
            android:layout_toRightOf="@+id/labelTreinosFinalizados"
            android:layout_toEndOf="@+id/labelTreinosFinalizados"
            android:layout_marginLeft="15dp" />

        <Button
            style="@style/btnNetfitness"
            android:layout_width="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_height="wrap_content"
            android:text="@string/labelButtonDatasTreinosRealizados"
            android:id="@+id/buttonMostrarDatasTreinosRealizados"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="22dp"
            android:layout_alignTop="@+id/labelDatasTreinosRealizados"
            android:layout_toRightOf="@+id/labelDatasTreinosRealizados"
            android:layout_toEndOf="@+id/labelDatasTreinosRealizados"
            android:minLines="0"
            android:padding="7dp"
            android:layout_alignParentRight="false"
            android:elegantTextHeight="false"
            android:layout_alignParentEnd="false"
            android:layout_marginTop="-8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_marginTop="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/TextViewAtualizarTreino"
            android:id="@+id/labelTextViewAtualizar"
            android:layout_below="@+id/buttonMostrarDatasTreinosRealizados"
            android:layout_alignLeft="@+id/labelDatasTreinosRealizados"
            android:layout_alignStart="@+id/labelDatasTreinosRealizados" />

        <Button
            style="@style/btnNetfitness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="+"
            android:textSize="25dp"
            android:width="60dp"
            android:id="@+id/buttonMore"
            android:layout_below="@+id/labelTextViewAtualizar"
            android:layout_alignLeft="@+id/labelTextViewAtualizar"
            android:layout_alignStart="@+id/labelTextViewAtualizar"
            android:layout_marginTop="20dp" />

        <Button
            style="@style/btnNetfitness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:width="60dp"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="-"
            android:textSize="25dp"
            android:id="@+id/buttonLess"
            android:layout_alignTop="@+id/buttonMore"
            android:layout_toRightOf="@+id/buttonMore"
            android:layout_toEndOf="@+id/buttonMore" />

        <Button
            style="@style/btnNetfitness"
            android:background="@drawable/btn_netfitness_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelButtonAtualizarQtdTreinos"
            android:id="@+id/buttonAtualizar"
            android:layout_marginLeft="60dp"
            android:height="50dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_alignBottom="@+id/buttonLess"
            android:layout_toRightOf="@+id/buttonLess"
            android:layout_toEndOf="@+id/buttonLess" />
    </RelativeLayout>
   </LinearLayout>
    </ScrollView>
</RelativeLayout>