<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    tools:context="br.net.netfitness.netfitness.InserirTreinoFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtLabelNomeTreino"
        android:id="@+id/txtLabelNomeTreino"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:textColor="#ff1997ff" />


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtNomeTreino"
        android:width="100dp"
        android:lines="1"
        android:maxLines="1"
        android:layout_above="@+id/txtLabelDescricaoTreino"
        android:layout_toEndOf="@+id/txtLabelNomeTreino"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/txtLabelNomeTreino"
        android:background="@drawable/bk"
        android:padding="3dp"
        android:layout_marginTop="3dp" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtLabelDescricaoTreino"
        android:id="@+id/txtLabelDescricaoTreino"
        android:layout_below="@+id/txtLabelNomeTreino"
        android:layout_alignLeft="@+id/txtLabelNomeTreino"
        android:layout_alignStart="@+id/txtLabelNomeTreino"
        android:layout_marginTop="20dp"
        android:textColor="#ff1997ff" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtDescricaoTreino"
        android:lines="1"
        android:maxLines="1"
        android:width="100dp"
        android:layout_marginLeft="10dp"
        android:layout_alignBottom="@+id/txtLabelDescricaoTreino"
        android:layout_toEndOf="@+id/txtLabelDescricaoTreino"
        android:layout_toRightOf="@+id/txtLabelDescricaoTreino"
        android:background="@drawable/bk"
        android:padding="3dp"
        android:layout_marginTop="3dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtLabelExercicios"
        android:id="@+id/txtLabelExercicios"
        android:layout_marginTop="30dp"
        android:textColor="#ff1997ff"
        android:layout_below="@+id/txtLabelDescricaoTreino"
        android:layout_alignLeft="@+id/txtLabelDescricaoTreino"
        android:layout_alignStart="@+id/txtLabelDescricaoTreino" />



    <ScrollView
        android:layout_below="@+id/txtLabelExercicios"
        android:layout_marginTop="10dp"
        android:id="@+id/scrollListaExercicios"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:background="@color/background_container_list_exercicios"
            android:layout_height="wrap_content"
            android:id="@+id/ScrollViewExerciciosInserirTreino">
        </LinearLayout>

    </ScrollView>

    <Button
        style="@style/btnNetfitness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLabelInserirTreino"
        android:id="@+id/btnInserirTreino"
        android:layout_marginLeft="130dp"
        android:layout_above="@+id/scrollListaExercicios"
        android:layout_toRightOf="@+id/txtLabelExercicios"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:minHeight="35dp"
        android:padding="2dp" />


</RelativeLayout>
